--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 MIT License
 
-Copyright (c) 2019 Daniel Jacobson
+Copyright (c) 2019 Daniel Jacobson and Stephen Whitelam
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
